--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
     "docs": "node build/docs.js",
     "build": "node build/build.js"
   },
+  "files": [
+    "src",
+    "dist",
+    "example",
+    "index.js"
+  ],
   "dependencies": {
     "quill": "^1.3.6"
   },
